# ppt-img-extract

./: Cargo.toml
src/: main.rs
