[package]
name = "ppt-img-extract"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.22"
zip = "2.1.3"
xmltree = "0.10"
once_cell = "1.19.0"
regex = "1.10.5"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
